@@ -1,76 +1,0 @@
-﻿using System;
-using Terraria;
-using Terraria.ModLoader;
-using Roguelike.Texture;
-using Roguelike.Common.Global;
-using Roguelike.Common.Utils;
-
-namespace Roguelike.Contents.Items.Accessories.TrinketAccessories;
-internal class Trinket_of_Perpetuation : BaseTrinket {
-	public override string Texture => ModTexture.MissingTexture_Default;
-	public override void TrinketDefault() {
-		Item.Set_InfoItem(true);
-	}
-	public override void UpdateTrinket(Player player, TrinketPlayer modplayer) {
-		player.GetModPlayer<Trinket_of_Perpetuation_ModPlayer>().Trinket_of_Perpetuation = true;
-		player.GetModPlayer<PlayerStatsHandle>().DebuffTime += .35f;
-	}
-}
-public class Samsara_of_Retribution : TrinketBuff {
-	public override bool ReApply(NPC npc, int time, int buffIndex) {
-		npc.GetGlobalNPC<Trinket_GlobalNPC>().Trinket_of_Perpetuation_PointStack = Math.Clamp(++npc.GetGlobalNPC<Trinket_GlobalNPC>().Trinket_of_Perpetuation_PointStack, 0, 10);
-		return base.ReApply(npc, time, buffIndex);
-	}
-	public override void UpdateTrinketNPC(NPC npc) {
-		npc.lifeRegen -= 10 + npc.GetGlobalNPC<Trinket_GlobalNPC>().Trinket_of_Perpetuation_PointStack * 10;
-	}
-	public override void OnEnded(NPC npc) {
-		npc.GetGlobalNPC<Trinket_GlobalNPC>().Trinket_of_Perpetuation_PointStack = 0;
-	}
-}
-public class Samsara_of_Retribution_Buff : TrinketBuff {
-	public override void UpdateTrinketPlayer(Player player, TrinketPlayer modplayer, ref int buffIndex) {
-		player.GetDamage(DamageClass.Generic) += player.GetModPlayer<Trinket_of_Perpetuation_ModPlayer>().NPCcounter * .01f;
-	}
-	public override void OnEnded(Player player) {
-		player.GetModPlayer<Trinket_of_Perpetuation_ModPlayer>().CountDown = ModUtils.ToSecond(25);
-		player.GetModPlayer<Trinket_of_Perpetuation_ModPlayer>().NPCcounter = 0;
-	}
-}
-public class Trinket_of_Perpetuation_ModPlayer : ModPlayer {
-	public bool Trinket_of_Perpetuation = false;
-	public int NPCcounter = 0;
-	public int CountDown = 0;
-	public override void ResetEffects() {
-		Trinket_of_Perpetuation = false;
-	}
-	public override void PostUpdate() {
-		CountDown = ModUtils.CountDown(CountDown);
-	}
-	public override void OnHitNPCWithItem(Item item, NPC target, NPC.HitInfo hit, int damageDone) {
-		Trinket_of_Perpetuation_OnHitNPCEffect(target, hit);
-	}
-	public override void OnHitNPCWithProj(Projectile proj, NPC target, NPC.HitInfo hit, int damageDone) {
-		Trinket_of_Perpetuation_OnHitNPCEffect(target, hit);
-	}
-	private void Trinket_of_Perpetuation_OnHitNPCEffect(NPC target, NPC.HitInfo hit) {
-		if (!Trinket_of_Perpetuation) {
-			return;
-		}
-		if (CountDown <= 0) {
-			if (Player.HasBuff(ModContent.BuffType<Samsara_of_Retribution_Buff>())) {
-				NPCcounter++;
-			}
-			else {
-				Player.AddBuff(ModContent.BuffType<Samsara_of_Retribution_Buff>(), ModUtils.ToSecond(15));
-			}
-		}
-		target.AddBuff(ModContent.BuffType<Samsara_of_Retribution>(), ModUtils.ToSecond(1));
-		if (hit.Crit) {
-			NPC.HitInfo hitExtra = hit;
-			hitExtra.Crit = false;
-			hitExtra.Damage += (int)(hitExtra.Damage * target.GetGlobalNPC<Trinket_GlobalNPC>().Trinket_of_Perpetuation_PointStack * .1f);
-			Player.StrikeNPCDirect(target, hitExtra);
-		}
-	}
-}
