@@ -73,4 +73,7 @@ Version 0.0.1:
 72/ Deleted Trinket7 causes it is never implemented.
 73/ Reduced sound volume when player spawn skeletron.
 74/ Small fixes toward localization.
-75/ Nerf Reactive Bombing damage from 90 to 30 damage. 
+75/ Nerf Reactive Bombing damage from 90 to 30 damage.
+76/ Slightly buff Synergy template in relic.
+77/ Small code optimization.
+78/ Removed Trinket of Perpetuation and made it into a artifact.
